--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>LMDb</title>
 </head>
 
@@ -51,13 +51,12 @@
       <!-- Search Box -->
       <div class="search-box">
         <label for="search">
-          <h4>Search a movie:</h4>
+          <h4>Search a title:</h4>
         </label>
-        <input type="text" id="search" name="search">
+        <input type="text" id="searchTitle" name="searchTitle">
       </div>
       <!-- Movie table -->
       <table id="movie-table">
-
       </table>
     </section>
   </main>
