--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>LMDb</title>
 </head>
@@ -19,12 +20,15 @@
     <h1>My Local Movie Database</h1>
   </header>
   <main class="container">
-    <!-- Add new movie -->
-    <section class="new-movie-block">
+    <!-- Menus -->
+    <section class="menu-block">
+      <div class="search-box">
+        <input type="text" id="searchTitle" name="searchTitle" placeholder="Search titles">
+      </div>
       <h2>Insert New Movie</h2>
       <section class="new-movie-form">
         <div class="new-movie-form-group">
-          <label for="title">Movie title:</label>
+          <label for="title">Title:</label>
           <input type="text" id="title" name="title">
         </div>
         <div class="new-movie-form-group">
@@ -48,21 +52,13 @@
     </section>
     <!-- Movie list -->
     <section class="movie-list-block">
-      <!-- Search Box -->
-      <div class="search-box">
-        <label for="search">
-          <h4>Search a title:</h4>
-        </label>
-        <input type="text" id="searchTitle" name="searchTitle">
-      </div>
+
       <!-- Movie table -->
       <table id="movie-table">
+        <!-- js inserting table here -->
       </table>
     </section>
   </main>
-  <footer>
-    <span>Made by Lucas</span>
-  </footer>
   <script src="index.js"></script>
 </body>
 
