--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!-- Header -->
   <header>
-    <h1>My Local Movie Database</h1>
+    <h1>Local Movie Database</h1>
   </header>
   <main class="container">
     <!-- Menus -->
