node + express server + axios cdn

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <title>LMDb</title>
 </head>
 
